# CLI_version_CCO

./: .gitignore  Dockerfile  Makefile  Readme.md  inference.py  pyproject.toml
src/cloud_optimizer/: config.py
src/cloud_optimizer/api/: app.py
src/cloud_optimizer/cli/: main.py
src/cloud_optimizer/core/: environment.py
tests/: test_environment.py
