[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud_optimizer"
version = "0.1.0"
description = "Cloud Cost Optimizer - An Industry-Ready CLI for Cloud Scaling Simulation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "openai",
    "requests",
    "typer",
    "rich",
    "loguru",
    "openenv-core>=0.2.0",
    "scalar-fastapi"
]

[project.scripts]
cco = "cloud_optimizer.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]